Fixed image and statistic paragraph positioning and spacing.

--- a/src/components/presentation/organisms/SplitSection.module.css
+++ b/src/components/presentation/organisms/SplitSection.module.css
@@ -1,43 +1,48 @@
 .section {
   composes: max-800 from '../../../shared/styles/typography.module.css';
-  box-sizing: border-box;
   display: grid;
   grid-template-columns: auto;
-  grid-template-rows: auto auto;
+  grid-template-rows: auto auto auto;
   grid-gap: 2rem;
   justify-content: center;
   align-items: center;
 }
 
-.first {
-  grid-row: 1 / span 1;
-  grid-column: 1 / span 1;
+/* @TODO: Factor this out into a better layout mechanism */
+.section img {
+  max-width: 75%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.second {
-  grid-row: 2 / span 1;
-  grid-column: 1 / span 1;
+.title {
+  margin-bottom: -3rem;
 }
 
 @media only screen and (min-width: 720px) {
   .section {
     composes: max-800 from '../../../shared/styles/typography.module.css';
-    box-sizing: border-box;
     display: grid;
-    grid-template-rows: auto;
-    grid-template-columns: 50% 50%;
+    grid-template-rows: auto auto;
+    grid-template-columns: 1fr 1fr;
     grid-gap: 2rem;
     justify-content: center;
     align-items: center;
   }
+
+  .title {
+    grid-row: 1 / span 1;
+    grid-column: 1 / span 2;
+  }
   
   .left {
-    grid-row: 1 / span 1;
+    grid-row: 2 / span 1;
     grid-column: 1 / span 1;
   }
   
   .right {
-    grid-row: 1 / span 1;
+    grid-row: 2 / span 1;
     grid-column: 2 / span 1;
   }  
 }
